# QxPSimpl-2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QxPSimpl.pri  QxPSimpl.pro  qxpsimpl.prf
include/: qxpsimpl.h  qxpsimpl_global.h
src/: qxpsimpl.cpp
